--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # Binaries for programs and plugins
 httpsignature-proxy
+.httpsignature-proxy.yaml
+.httpsignature-proxy
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+*.ppk
+*.pub
 
 # Test binary, built with `go test -c`
 *.test
