--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -10,15 +10,14 @@ jobs:
   golangci:
     strategy:
       matrix:
-        go-version: [1.16.x]
+        go-version: [ 1.17.x ]
     name: lint
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-go@v2
       - uses: actions/checkout@v2
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
-          version: v1.38
-          #skip-build-cache: true
-          #skip-pkg-cache: true
+          version: v1.44
