--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [ 1.17.x ]
+        go-version: [ 1.18.x ]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
@@ -26,7 +26,7 @@ jobs:
 
       - name: Setup test execution
         run: |
-          go get -u gotest.tools/gotestsum
+          go install gotest.tools/gotestsum@latest
           go mod tidy
 
       - name: Test
