--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,6 @@ updates:
     reviewers:
       - "upvest-juha"
       - "upvest-vadym"
-      - "rymcol"
-      - "velanse"
+      - "kiryalovik"
+      - "upvest-mike"
 
