--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -10,7 +10,7 @@ jobs:
   golangci:
     strategy:
       matrix:
-        go-version: [ 1.21.4 ]
+        go-version: [ 1.20.x ]
     name: lint
     runs-on: ubuntu-latest
     steps:
