--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -28,7 +28,7 @@ checksum:
   name_template: "checksums.txt"
   algorithm: sha256
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  version_template: "{{ .Tag }}-next"
 changelog:
   sort: asc
   filters:
@@ -67,7 +67,7 @@ brews:
       email: info@upvest.co
 
     # Folder inside the repository to put the formula.
-    folder: Formula
+    directory: Formula
 
     # Caveats for the user of your binary.
     #caveats: "How to use this binary"
