--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -11,7 +11,7 @@ jobs:
   golangci:
     strategy:
       matrix:
-        go-version: [ 1.21.4 ]
+        go-version: [ 1.22.2 ]
     name: lint
     runs-on: ubuntu-latest
     steps:
@@ -20,5 +20,6 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
           version: v1.55.2
+          skip-cache: true
+          skip-save-cache: true
