--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -9,13 +9,14 @@ on:
 
 jobs:
   golangci:
-    strategy:
-      matrix:
-        go-version: [ 1.22.2 ]
-    name: lint
+    name: golangci-lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v5
+        with:
+          go-version: '1.21.4'
+          cache: false
+
       - uses: actions/checkout@v4
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
