--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -9,16 +9,18 @@ on:
 
 jobs:
   golangci:
-    strategy:
-      matrix:
-        go-version: [ 1.21.4 ]
-    name: lint
+    name: golangci-lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v5
+        with:
+          go-version: '1.21.4'
+          cache: false
+
       - uses: actions/checkout@v4
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
           version: v1.55.2
+          skip-cache: true
+          skip-save-cache: true
