goreleaser conf for darwin os

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,21 @@
 version: 2
 builds:
-  - id: default
+  - id: darwin_amd64
     goos:
       - darwin
+    goarch:
+      - amd64
+    # Default is `-s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}} -X main.builtBy=goreleaser`.
+    ldflags:
+      - -s -w -X github.com/upvestco/httpsignature-proxy/cmd.version={{.Version}} -X github.com/upvestco/httpsignature-proxy/cmd.commit={{.Commit}} -X github.com/upvestco/httpsignature-proxy/cmd.date={{.Date}} -X github.com/upvestco/httpsignature-proxy/cmd.builtBy=goreleaser
+    env:
+      - CGO_ENABLED=1
+      - GO111MODULE=on
+      - GOOS=linux
+      - GOARCH=amd64
+    mod_timestamp: "{{ .CommitTimestamp }}"
+  - id: default
+    goos:
       - linux
       - windows
     goarch:
@@ -12,7 +25,7 @@ builds:
     ldflags:
       - -s -w -X github.com/upvestco/httpsignature-proxy/cmd.version={{.Version}} -X github.com/upvestco/httpsignature-proxy/cmd.commit={{.Commit}} -X github.com/upvestco/httpsignature-proxy/cmd.date={{.Date}} -X github.com/upvestco/httpsignature-proxy/cmd.builtBy=goreleaser
     env:
-      - CGO_ENABLED=1
+      - CGO_ENABLED=0
       - GO111MODULE=on
     mod_timestamp: "{{ .CommitTimestamp }}"
 archives:
