--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Build a release with Goreleaser
 
-on:
-  push:
-    tags:
-      - "v*"
+on: push
+#  push:
+#    tags:
+#      - "v*"
 
 permissions:
   contents: write
